# magnit_meetup

./: CMakeLists.txt  README.md  main.cpp
sources/: magicfunction.h
