cmake_minimum_required(VERSION 3.2)

set(NAME_EXECUTABLE "magic_functoin")
set(PATH_SRC "sources")


project(${NAME_EXECUTABLE} VERSION 0.0.1  LANGUAGES CXX)

add_executable(${NAME_EXECUTABLE} main.cpp)

target_include_directories(${NAME_EXECUTABLE} PRIVATE ${PATH_SRC})

set_target_properties(${NAME_EXECUTABLE} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
)

target_compile_options(${NAME_EXECUTABLE} PRIVATE -Wall -Wextra -pedantic -Werror)

install(TARGETS ${NAME_EXECUTABLE} RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT azbyx@gmail.com)

include(CPack)
